--- a/src/main/resources/templates/link/view.html
+++ b/src/main/resources/templates/link/view.html
@@ -18,22 +18,24 @@
         </div>
         <div class="col-11">
             <p class="title">
-                <a class="title " href="http://therealdanvega.com/blog/2018/03/01/what-is-new-spring-boot-2">
-                    What's new in Spring Boot 2?
+                <a class="title " th:href="@{'/link/' + ${link.id}}" th:text="${link.title}">
+                    Title Goes Here
                 </a>
-                <span class="domain">(<a href="http://therealdanvega.com">therealdanvega.com</a>)</span>
+                <span class="domain">(<a th:href="${link.url}" th:text="${link.getDomainName()}" target="_blank">therealdanvega.com</a>)</span>
             </p>
             <p class="tagline ">submitted
-                <time title="Sat Mar 10 06:26:36 2018 UTC" datetime="2018-03-10T06:26:36+00:00" class="live-timestamp">2
-                    hours ago
+                <!--                <time title="Sat Mar 10 06:26:36 2018 UTC" datetime="2018-03-10T06:26:36+00:00" class="live-timestamp">2 hours ago</time> by-->
+                <time th:title="${link.getCreationDate()}" th:datetime="${link.getCreationDate()}"
+                      class="live-timestamp" th:text="${link.getPrettyTime()}">1 hour(s)
                 </time>
                 by
-                <a href="https://www.reddit.com/user/therealdanvega" class="author">therealdanvega</a>
-                <span class="userattrs"></span>
+                <a href="/" class="author">therealdanvega</a>
             </p>
+            <p><a th:href="${link.url}" th:text="${link.url}" target="_blank"></a></p>
             <p>
-                <a href="#" class="comments"><i class="fas fa-comments"></i> 8 comments</a>
-                <a href="#" class="share"><i class="fas fa-share-square"></i> share</a>
+                <a th:href="@{'/link/' + ${link.id} + '#comments'}" class="comments"
+                   th:text="|${link.getComments().size()} comments|"><i class="fas fa-comments"></i> 0 comments</a>
+                <a href="/" class="share"><i class="fas fa-share-square"></i> share</a>
             </p>
         </div>
     </div>
@@ -42,7 +44,7 @@
     <div id="comments" class="comments">
         <div class="row header">
             <div class="col-1">&nbsp;</div>
-            <div class="col-11 title">
+            <div class="col-11 title" th:text="|all ${link.getComments().size()} comments|">
                 all 21 comments
             </div>
         </div>
