Link Controller Methods Completed

--- a/src/main/resources/templates/link/submit.html
+++ b/src/main/resources/templates/link/submit.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{layouts/main_layout :: head(title='Springit - Spring Boot Reddit Clone')}"></head>
-
+<head th:replace="~{layouts/main_layout :: head(title='Springit - Spring Boot Reddit Clone')}">
+</head>
 <body>
 
 <nav th:replace="~{layouts/main_layout :: nav}"></nav>
@@ -37,6 +36,7 @@
         </div>
         <div class="col-md-3"></div>
     </div>
+
 </div>
 
 </body>
