--- a/src/main/resources/templates/link/list.html
+++ b/src/main/resources/templates/link/list.html
@@ -31,7 +31,7 @@
                       class="live-timestamp" th:text="${link.getPrettyTime()}">1 hour(s)
                 </time>
                 by
-                <a href="/" class="author">therealdanvega</a>
+                <a href="/" class="author" th:text="${link.createdBy}">therealdanvega</a>
             </p>
             <p>
                 <a th:href="@{'/link/' + ${link.id} + '#comments'}" class="comments"
