--- a/src/main/resources/templates/auth/register.html
+++ b/src/main/resources/templates/auth/register.html
@@ -6,6 +6,14 @@
 <nav th:replace="~{layouts/main_layout :: nav}"></nav>
 <div th:replace="~{layouts/main_layout :: jumbotron}"></div>
 
+<div class="row" th:if="${success}">
+    <div class="col-md-3"></div>
+    <div class="col-md-6 alert alert-success" role="alert" >
+        You have successfully registered with us. Please check your email to activate your account.
+    </div>
+    <div class="col-md-3"></div>
+</div>
+
 <form class="form-horizontal" role="form" method="POST" th:action="@{/register}" th:object="${user}"
       th:if="!${success}">
     <div class="row">
